--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
     "expo": "~50.0.14",
+    "expo-av": "~13.10.5",
+    "expo-file-system": "~16.0.8",
+    "expo-image": "~1.10.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-dropdown-select-list": "^2.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
